# PAEAR

./: README.md
aubo_robot/: .gitattributes
aubo_robot/aubo_controller/src/: joint_trajectory_action.cpp
aubo_robot/aubo_demo/: CMakeLists.txt  package.xml
aubo_robot/aubo_demo/src/: snapshot_ghost.cpp
aubo_robot/aubo_driver/src/: aubo_driver.cpp
aubo_robot/aubo_e3_moveit_config/launch/: ompl_planning_pipeline.launch.xml
aubo_robot/aubo_e5_moveit_config/launch/: lerp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml
aubo_robot/aubo_i20_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aubo_robot/aubo_i7_moveit_config/: .setup_assistant  package.xml
aubo_robot/aubo_is20_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aubo_robot/aubo_is7_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mecheye_ros_interface/: README.md
mecheye_ros_interface/include/: MechMindCamera.h
mecheye_ros_interface/launch/: start_camera.launch
mecheye_ros_interface/src/: MechMindCamera.cpp
src/: Env3D.py  Points_3D.py  RL_brain.py  parsers.py  reward_LDCV.py
src/covered_points/: points_episode_10_1.txt  points_episode_1_11.txt  points_episode_1_12.txt  points_episode_1_13.txt  points_episode_1_14.txt  points_episode_1_15.txt  points_episode_1_5.txt  points_episode_1_6.txt  points_episode_1_7.txt  points_episode_1_combined.txt  points_episode_2_1.txt  points_episode_2_10.txt  points_episode_2_2.txt  points_episode_2_3.txt  points_episode_2_4.txt  points_episode_2_5.txt  points_episode_2_6.txt  points_episode_2_7.txt  points_episode_2_8.txt  points_episode_2_9.txt  points_episode_2_combined.txt  points_episode_3_10.txt  points_episode_3_2.txt  points_episode_3_3.txt  points_episode_3_4.txt  points_episode_3_8.txt  points_episode_3_9.txt  points_episode_4_10.txt  points_episode_4_5.txt  points_episode_4_7.txt  points_episode_4_8.txt  points_episode_4_9.txt  points_episode_4_combined.txt  points_episode_5_10.txt  points_episode_5_2.txt  points_episode_5_3.txt  points_episode_5_7.txt  points_episode_5_8.txt  points_episode_5_combined.txt  points_episode_6_10.txt  (+24 more)
(+140 files in other folders)
